# GreenLeaf

./: .gitignore  .project  CMakeLists.txt  README.md  build.sh
Doc/: GreenLeaf_CrossDomainArchitectureFigure.vsdx  GreenLeaf_SingleRegionArchitectureFigure.vsdx  GreenLeaf_SoftwareArchitectureFigure.vsdx  GreenLeaf（绿叶）分布式通用型服务器端中间件-版权申请资料及要求.7z  logo.eps  logo.psd
Inc/GreenLeaf/: GLDBIO.h  GLDiskIO.h  GLNetIO.h  GLUtils.h
Inc/GreenLeaf/GLDBIO/: ConnectionPoolAbstract.hpp  MSSqlConnectionPool.h  MySqlConnectionPool.h  OracleConnectionPool.h
Inc/GreenLeaf/GLDiskIO/: IniParse.h  JsonParse.h  XmlParse.h
Inc/GreenLeaf/GLNetIO/: ActiveTcpConnection.h  BundleResponseData.h  Connections.h  HttpRequest.h  MessageProtocol.h  MsgHandlerRepository.h  MsgHandlerRepository.ipp  ParseRequestData.h  SessionManager.h  Sessions.h  TcpAcceptor.h  TcpConnection.h  UdpEndPoint.h
Inc/GreenLeaf/GLUtils/: ATENEncryption.h  Datatime.h  IOManager.h  Logger.h  MD5Encryption.h  Path.h  StringOpertion.h  Uuid.h
Lib/debug_linux_x64/: libmysqlclient.so.18  libodbc.so.1
MsgServer/: CMakeLists.txt
MsgServer/inc/GreenLeaf/MsgServer/: DataCache.h  DataCacheManager.h  ExceptionCode.h  HandlerCommon.h  HandlerDefines.h  HandlerManager.h  MsgServer.h  MsgServerImpl.h  UserManager.h
MsgServer/inc/GreenLeaf/MsgServer/handlers/: CCLDefines.h  CCLHandler.h  CHGDefines.h  CHGHandler.h  CUSDefines.h  CUSHandler.h  GETDefines.h  GETHandler.h  LCADefines.h  LCAHandler.h  LGVDefines.h  LGVHandler.h  LIMDefines.h  LIMHandler.h  LSVDefines.h  LSVHandler.h  NEVDefines.h  NEVHandler.h  RUSDefines.h  RUSHandler.h  SCOPDefines.h  SCOPHandler.h  SLGVDefines.h  SLGVHandler.h  USRDefines.h  USRHandler.h
MsgServer/src/: DataCacheManager.cpp  HandlerCommon.cpp  HandlerManager.cpp  MsgServer.cpp  MsgServerImpl.cpp  UserManager.cpp  main.cpp
MsgServer/src/handlers/: CCLHandler.cpp  CHGHandler.cpp  CUSHandler.cpp  GETHandler.cpp  LCAHandler.cpp  LGVHandler.cpp  LIMHandler.cpp  LSVHandler.cpp  NEVHandler.cpp  RUSHandler.cpp  SCOPHandler.cpp  SLGVHandler.cpp  USRHandler.cpp
Src/GLDBIO/: CMakeLists.txt
Src/GLDBIO/src/: GLDBIO.cpp  MSSqlConnectionPool.cpp  MySqlConnectionPool.cpp  OracleConnectionPool.cpp
Src/GLDiskIO/: CMakeLists.txt
Src/GLDiskIO/src/: GLDiskIO.cpp  IniParse.cpp  JsonParse.cpp  XmlParse.cpp
Src/GLNetIO/: CMakeLists.txt
Src/GLNetIO/src/: ActiveTcpConnection.cpp  BundleResponseData.cpp  Connections.cpp  GLNetIO.cpp  HttpRequest.cpp  ParseRequestData.cpp  SessionManager.cpp  Sessions.cpp  TcpAcceptor.cpp  TcpConnection.cpp  UdpEndPoint.cpp
Src/GLUtils/: CMakeLists.txt
Src/GLUtils/src/: ATENEncryption.cpp  Datatime.cpp  GLUtils.cpp  IOManager.cpp  Logger.cpp  MD5Encryption.cpp  Path.cpp  StringOpertion.cpp  Uuid.cpp
